# simpleconfig

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Minor change to README  README.md  conanfile.txt
.github/: CODEOWNERS
.github/workflows/: alpine.yml  code-analysis.yml  codeql.yml  conan.yml  cppcheck.yml  rockylinux.yml  ubuntu.yml
cmake/: Findcmocka.cmake  Findyaml.cmake  enable_asan.cmake  enable_check_clang_tidy.cmake  enable_check_cppcheck.cmake  enable_coverage.cmake  enable_ubsan.cmake  macros.cmake
examples/: CMakeLists.txt  minimal.c
fuzz/: CMakeLists.txt  fuzz_sconf_get_set.c  fuzz_sconf_yaml_read.c
include/: sconf.h  sconf_private.h
src/: CMakeLists.txt  array.c  array.h  convert.c  convert.h  defaults.c  env.c  opts.c  sconf.c  validate.c  yaml.c
tests/: CMakeLists.txt  sconf_tests.h  test_sconf_defaults.c  test_sconf_env_read.c  test_sconf_err_set.c  test_sconf_initialize.c  test_sconf_node_array.c  test_sconf_node_array_foreach.c  test_sconf_node_array_next.c  test_sconf_node_dict.c  test_sconf_node_dict_foreach.c  test_sconf_opts_parse.c  test_sconf_set_and_get_bool.c  test_sconf_set_and_get_float.c  test_sconf_set_and_get_int.c  test_sconf_set_and_get_str.c  test_sconf_type_to_arg_type_str.c  test_sconf_type_to_str.c  test_sconf_validate.c  test_sconf_yaml_read.c
tests/yaml/: test_array.yaml  test_boolean.yaml  test_float.yaml  test_float_overflow.yaml  test_float_underflow.yaml  test_integer.yaml  test_integer_overflow.yaml  test_integer_underflow.yaml  test_max_depth.yaml  test_multiple_documents.yaml  test_nested_dicts.yaml  test_string.yaml
tools/: llvm-gcov.sh
